@@ -2,26 +2,34 @@ package victor.training.java.virtualthread.experiments;
 
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.http.HttpEntity;
+import org.apache.http.client.methods.HttpGet;
+import org.apache.http.util.EntityUtils;
+import org.awaitility.Awaitility;
 import org.springframework.web.client.RestTemplate;
 import victor.training.java.Util;
 import victor.training.java.virtualthread.util.RunMonitor;
 
 import java.math.BigInteger;
+import java.net.URI;
+import java.net.http.HttpClient;
 import java.util.concurrent.Executors;
 
-import static java.math.BigInteger.*;
+import static java.math.BigInteger.ZERO;
+import static java.math.BigInteger.valueOf;
 
 @Slf4j
 public class Experiment {
 
   public static void main() throws Exception {
+    Util.sleepMillis(1000); // allow the SpringApp to restart
     RunMonitor monitor = new RunMonitor();
     try (var executor = Executors.newVirtualThreadPerTaskExecutor()) {
-      for (int taskId = 0; taskId < 30; taskId++) {
+      for (int taskId = 0; taskId < 3; taskId++) {
         Runnable work = () -> {
-        io(); // add a prior warmup call
+//          io(); // add a prior warmup call
 //          cpu();
-//          locks();
+          locks();
         };
         executor.submit(monitor.run(taskId, work));
       }
@@ -33,18 +41,29 @@ public class Experiment {
     monitor.printExecutionTimes();
   }
 
-  /* ============ IO ============= */
+  private static final HttpClient javaClient = HttpClient.newHttpClient();
+//  private static final HttpClient javaClient = HttpClient.newBuilder().executor(Executors.newVirtualThreadPerTaskExecutor()).build();
+
   private static final RestTemplate restTemplate = new RestTemplate();
+
+  private static final org.apache.http.client.HttpClient apacheClient = org.apache.http.impl.client.HttpClients.createDefault();
 
   @SneakyThrows
   private static void io() {
-//    Thread.sleep(100); // pretend a network call:
-    var r = restTemplate.getForObject("http://localhost:8080/call", String.class);
-//    System.out.println("Fetched " + r);
-    // RestTemplate.get, WebClient...block(), HttpClient, FeignClient ...
-    // CompletableFuture...get()
-    // TODO throttle load on external services using a Semaphore
+    URI uri = URI.create("http://localhost:8080/call");
+    Thread.sleep(100); // pretend a network call:
+
+//    var result = restTemplate.getForObject(uri, String.class);
+
+//    HttpRequest request = HttpRequest.newBuilder().uri(uri).GET().build();
+//    var result = javaClient.send(request, HttpResponse.BodyHandlers.ofString()).body();
+
+//    HttpEntity entity = apacheClient.execute(new HttpGet(uri)).getEntity();
+//    var result = EntityUtils.toString(entity);
+
+//    log.info("Fetched {}", result); // IO operation: unmounts PT
   }
+  // TODO throttle pressure on external services using a Semaphore?
 
   /* ============ CPU ============= */
   public static long blackHole;
@@ -63,10 +82,13 @@ public class Experiment {
   static int sharedMutable;
 
   public static synchronized void locks() {
-    Util.sleepMillis(100);
     sharedMutable++;
-    // TODO observe Thread Pinning in the JFR recording studied using JMC
-    // TODO Move to ReentrantLock
+    Util.sleepMillis(100); // long operation (eg network) in sync block
+
+    // TODO add to VM options: -Djdk.tracePinnedThreads=full
+    // TODO run with JFR profiler and observe "Virtual Thread Pinned" events in the .jfr recording
+    // TODO run ExperimentTest @Test @ShouldNotPin
+    // TODO Fix: Refactor to ReentrantLock
   }
 
 }
